tests/codegen/fail/interface/struct/derive_implementers_duplicate_ugly.stderr
error[E0119]: conflicting implementations of trait `From<ObjA>` for type `CharacterValueEnum<ObjA, ObjA>`
  --> fail/interface/struct/derive_implementers_duplicate_ugly.rs:11:10
   |
11 | #[derive(GraphQLInterface)]
   |          ^^^^^^^^^^^^^^^^
   |          |
   |          first implementation here
   |          conflicting implementation for `CharacterValueEnum<ObjA, ObjA>`
   |
   = note: this error originates in the derive macro `GraphQLInterface` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `MutuallyExclusive` for type `ObjA`
  --> fail/interface/struct/derive_implementers_duplicate_ugly.rs:11:10
   |
11 | #[derive(GraphQLInterface)]
   |          ^^^^^^^^^^^^^^^^
   |          |
   |          first implementation here
   |          conflicting implementation for `ObjA`
   |
   = note: this error originates in the macro `::juniper::sa::assert_type_ne_all` which comes from the expansion of the derive macro `GraphQLInterface` (in Nightly builds, run with -Z macro-backtrace for more info)
